# CutScene

./: .gitignore  CMakeLists.txt  qml.qrc
qml/: Main.qml
qml/components/: Timeline.qml  ToolBar.qml
scripts/: build-tests-vscode.ps1
src/: DragLabel.h  DragLabelWrapper.h  DropWidget.h  HeaderBarWidget.cpp  HeaderBarWidget.h  LeftTabBarWidget.cpp  LeftTabBarWidget.h  MainContentWidget.cpp  MainContentWidget.h  MediaImageProvider.h  MediaItemModel.cpp  MediaItemModel.h  RightSidebarWidget.cpp  RightSidebarWidget.h  VideoThumbnailLoader.cpp  VideoThumbnailLoader.h  main.cpp
tests/: CMakeLists.txt  drop_widget_test.cpp  header_bar_widget_test.cpp  smoke_test.cpp  test_main.cpp
